<resources>
    <string name="app_name">Health Status Analyzer</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_collect_data">Collect data</string>
    <string name="menu_gather_insights">Gather insights</string>
    <string name="menu_manage_data">Manage data</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string-array name="summery_disease">
        <item>All</item>
        <item>Asthma</item>
        <item>Cancer</item>
        <item>Covid</item>
        <item>Dengue</item>
        <item>Diabetes</item>
        <item>Malaria</item>
        <item>Others</item>
        <item>Pnemonia</item>
        <item>TB</item>
    </string-array>

    <string-array name="age">
        <item>Adults</item>
        <item>Senior</item>
        <item>Young</item>

    </string-array>


    <string-array name="summery_literate">
        <item>All</item>
        <item>Below 10th</item>
        <item>Graduated</item>
        <item>10th pass</item>
        <item>12th pass</item>
        <item>Uneducated</item>

    </string-array>

    <string-array name="summery_nutrition">
        <item>All</item>
        <item>Healthy</item>
        <item>Overweight</item>
        <item>Underweight</item>



    </string-array>


    <string-array name="summery_income">
        <item>5L+</item>
        <item>BPL</item>
        <item>5L-</item>
        <item>Not given</item>


    </string-array>
</resources>